--- a/app/src/main/res/layout/activity_stub.xml
+++ b/app/src/main/res/layout/activity_stub.xml
@@ -6,9 +6,8 @@
     android:layout_height="match_parent"
     tools:context="sample.template.presentation.view.activity.StubActivity">
 
-    <TextView
-        android:id="@+id/testView"
-        android:text="Loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
