--- a/app/src/main/res/layout/stub_list.xml
+++ b/app/src/main/res/layout/stub_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ListView
+<sample.template.widget.StubListWidget
     android:id="@+id/listView"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
