Introducing PerActivity scope

--- a/app/src/main/res/layout/stub_list.xml
+++ b/app/src/main/res/layout/stub_list.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<sample.template.widget.StubListWidget
-    android:id="@+id/listView"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+    />
+
+    <TextView
+        android:id="@+id/loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/loading"
+        android:visibility="invisible"/>
+</merge>
